# seagul_core

./: .gitignore  Cargo.toml  README.md
src/: conversion.rs  decoder.rs  encoder.rs  lib.rs  prelude.rs
tests/: e2e.rs
